# lc0_bridging_the_gap

./: .gitattributes  .gitignore  AGENTS.md  IMPLEMENTATION_STATUS_AND_NEXT_WORK.md  LICENSE  NON_GCP_GPU_RUNBOOK.md  PLANS.md  README.md  REPO_AUDIT_AND_NEXT_STEPS.md  SCHUT_PAPER_REPRO_PLAN.md  TESTS.md  pyproject.toml  run_eval_test.py  run_match_test.py  run_test_pipeline.sh  run_test_pipeline_local.sh
lc0jax-human/: EXPERIMENT_DESIGN.md  GEMINI.md  PHASE2_ERROR_LOG.md  README.md  TPU_JEPA_PLAN.md  TPU_JEPA_PLAN_PHASE2_1.md  TPU_JEPA_PLAN_PHASE3.md  TPU_PROGRESS_2026-04-14.md  TPU_PROGRESS_2026-04-19_FINAL.md  TPU_TROUBLESHOOTING.md  ablation.py  ablation_results.csv  analyze.py  create_experiments.py  experiments.jsonl  hparam_sweep.jsonl  package-lock.json  pyproject.toml  run_orchestrator.sh  skills-lock.json  start_sweep.sh
lc0jax-human/docs/: data_loading.md  lc0_bt4_jax_repro.md  roofline_analysis.md  tpu_profile_job_spec.project.json  tpu_smoke_test_spec.json  tpu_spot_job_spec.example.json  tpu_spot_job_spec.project.json  tpu_spot_training.md  tpu_tournament_v21.json
lc0jax-human/lc0jaxhuman/: __init__.py  nnx_bt4.py  paths.py  policy.py  policy_attn_map.txt  reference_bt4.py  weights.py
lc0jax-human/lc0jaxhuman/analysis/: __init__.py  bt4_theory.py  (+3 more)
lc0jax-human/notebooks/: analyze_jepa.py  lc0_bt4_jax_repro.py  leela_data_pipeline.py  play_bt4.py  training_jepa.py  training_roofline.py
lc0jax-human/scripts/: check_sweep.py  check_wandb.py  compare_gradients.py  compare_logits.py  evaluate_elo.py  inspect_chunk_floats.py  inspect_leela_chunks.py  orchestrator_startup.sh  poll_and_download_chunks.py  preprocess_chunks.py  process_tcec_to_gcs.py  profile_jepa_sweep.py  profile_jepa_tpu.py  run_roofline.py  run_tpu_spot_jepa.py  sanity_check_bt4.py  stream_lichess_to_gcs.py  sweep_manager.py  train_dfm.py  train_jepa.py  uci_bt4.py  uci_dfm.py
lc0jax-human/sweep_runs/: spec_dfm-sweep-lr1e3-muon-k4.json  spec_dfm-sweep-lr1e4-muon-k4.json  spec_dfm-sweep-lr3e4-muon-k4.json
lc0jax-human/tests/: check_gradients.py  test_dfm_step.py  test_muon.py  test_overfit.py  test_pipeline_e2e.py  test_training_step.py
(+131 files in other folders)
